	the lastest size could be reverted as the previous one.

2012-07-19  Gustavo Sverzut Barbieri (k-s)

	* Add Elm_Win_Trap and elm_win_trap_set() to allow e17 integration.

2012-07-23  Hermet (ChunEon Park)

	* fixed invalid sd memory access when delete window inlined image

2012-07-24  Hermet (ChunEon Park)

	* fixed scroller to not have the hold flag when mouse up happened.

2012-07-24  Gustavo Sverzut Barbieri (k-s)

	* Add elm_flip_go_to()

2012-07-25  Carsten Haitzler (The Rasterman)

	* Fix elementary quicklaunch to transprot environment over as
        well as args and cwd.

2012-07-27  Shinwoo Kim (kimcinoo)

	* Patch in incomplete access supoprt in popup.

2012-07-30  Cedric Bail

	* Allow freeze/thaw on Elm_Layout and reduce number of object update.
	* Defer Elm_Calendar generation until really needed.

2012-07-31  Shinwoo Kim (kimcinoo)

	* Patch in incomplete access supoprt in ctxpopup and dayselector.

2012-08-02  Cedric Bail

	* Fix elm_image_orient_set/get.

2012-08-06  Cedric Bail

	* Make Elm_Slider update itself asynchronously.

2012-08-09  Cedric Bail

	* Reset main loop after fork in quicklaunch.

2012-08-18  Shinwoo Kim (kimcinoo)

	* Patch in incomplete access in: colorselecto, win, diskselector,
          gengrid, genlist, progressbar, slider, label, entry

2012-08-20   Jihyeon Seol

	* Fix sizing issue in multibutton entry by making all lines
          the same height.

2012-08-20  Shinwoo Kim (kimcinoo)

	* Patch in incomplete access support in datetime.

2012-08-21  Carsten Haitzler (The Rasterman)

	* Spotted an incompleteness. there is a way to set Elm_Win_Trap for
          manual render, but no way to go to an elm win and do this (And
          of course twiddle with the norender state too), so add this in.
          elm_win_norender_push(), elm_win_norender_pop(),
          elm_win_norender_get() and elm_win_render() added.

2012-08-21  Shinwoo Kim (kimcinoo)

	* Patch in incomplete access support in segment control and spinner
